k8/bad-all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-node-stats-frontend
  namespace: node-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-node-stats-frontend
      intentions: bad
  template:
    metadata:
      labels:
        app: bad-node-stats-frontend
        intentions: bad
    spec:
      containers:
      - name: bad-node-stats-frontend
        image: georgenicoll/stats-frontend
        workingDir: /stats-frontend
        command: [ "node" ]
        args:
        - "app/index.js"
        resources:
          requests:
            memory: "25Mi"
            cpu: "25m"
          limits:
            memory: "50Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            scheme: HTTP
            path: /health
            port: 80
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          httpGet:
            scheme: HTTP
            path: /health
            port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bad-stats
  namespace: node-stats
  labels:
    service-type: external
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: bad-node-stats-frontend
  type: LoadBalancer
